2021-11-03 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/TclWebapache.c: removed unnecessary call to TclWeb_InitEnvVars
	when loading input headers
	* tests/env.test: cleaning up http tokens resources

2021-11-01 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/Tclwebapache.c: expanded comments to newly
	introduced functions

2021-10-25 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/Tclwebapache.c: extended comments
	* src/rivet.h: new macro MINSTRLEN

2021-10-20 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/Tclwebapache.c: new environment variable handling. 
	  Command ::rivet::env doesn't necessarily trigger the whole enviroment load
	  into request_rec, it tries to resolve a variable incrementally. Need
	  to recommend the usage of ::rivet::env instead of ::rivet::load_env
	* tests/env.rvt: adding new tests to environment variable resolution

2021-09-06 Massimo Manghi <mxmanghi@apache.org>
	* rivet/packages/session/session-create-*.sql: making cache fields larger

2021-04-13 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/rivetInspect.c: add server current loglevel. Removed
	unneeded ref count management in the server array construction

2021-03-12 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/mod_rivet.c: Rivet_SeekMPMBridge aligned with new implementation
	made for 3.2.0. Removed call to Tcl_InitNotifier

2021-03-07 Massimo Manghi <mxmanghi@apache.org>
	* VERSION: bumped version as 3.2.1
	* src/mod_rivet_ng/mod_rivet.c: more linear determination of the bridge name
	* rivet/packages/formbroker.tcl: introduced key maxlength

2021-03-11 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/rivetInspect.c: add SingleThreadExit introspection
	* src7mod_rivet_ng/rivet_lazy_mpm.c: fixed lazy bridge that did not build anymore

2020-10-01 Massimo Manghi <mxmanghi@apache.org>
	* src/mod_rivet_ng/rivet_prefork_mpm.c: Fixed trivial bug in checking the
	rivet cache size